--- a/references.bib
+++ b/references.bib
@@ -10775,3 +10775,12 @@ Subject\_term: Computational biology and bioinformatics, Computer science, Resea
   urldate = {2024-08-29},
   langid = {english}
 }
+
+@techreport{justiceanalyticalservicesUserGuideRecorded2016,
+  title = {User {{Guide}} to {{Recorded Crime Statistics}} in {{Scotland}}},
+  author = {{Justice Analytical Services}},
+  year = {2016},
+  institution = {Scottish Government},
+  urldate = {2024-08-30},
+  file = {/home/work/Zotero/storage/887ACB3J/recorded-crime-user-guide.pdf}
+}
